[package]
name = "datafusion"
version = "0.1.0"
authors = ["Andrew Lamb <andrew@nerdnetworks.org>"]
edition = "2021"
description = "Re-exports datafusion at a specific version"

[dependencies]

# Rename to workaround doctest bug
# Turn off optional datafusion features (e.g. don't get support for crypo functions or avro)
upstream = { git = "https://github.com/urbanlogiq/arrow-datafusion.git", rev="0bd6c26a029c3f3117ebe5bb3a5b3d62ae95a41c", default-features = false, package = "datafusion" }
workspace-hack = { path = "../workspace-hack"}
